[tool.poetry]
name = "datagpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
openai = "^0.27.8"
guidance = "^0.0.64"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 80

[tool.black]
line-length = 80
preview = true